# ray_tracing_challenge

./: Cargo.toml  README.org
builder-derive/: Cargo.toml
builder-derive/examples/: main.rs
builder-derive/src/: lib.rs
builder-derive/tests/: test.rs  tests.rs
builder-derive/tests/builder/: happy_path.rs  unrecognized-attribute.rs  unrecognized-attribute.stderr
ray-tracer/: Cargo.toml
ray-tracer/images/: circle.ppm  scene.ppm
ray-tracer/src/: main.rs
ray-tracer/src/shapes/: material.rs  mod.rs  plane.rs  sphere.rs
ray-tracer/src/shapes/patterns/: mod.rs  perlin.rs  ring.rs  striped.rs
ray-tracer/src/world/: camera.rs  intersection.rs  light.rs  mod.rs
ray_tracer/: Cargo.toml
ray_tracer/src/: main.rs
ray_tracer/src/primatives/: ray.rs  transformation.rs
ray_tracer/src/world/: canvas.rs  mod.rs
src/: camera.rs  canvas.rs  color.rs  comparison.rs  hittable.rs  intersection.rs  light.rs  main.rs  material.rs  matrix.rs  point.rs  ray.rs  shape.rs  sphere.rs  transformation.rs  tuple.rs  vector.rs  world.rs
src/primatives/: matrix.rs  mod.rs  point.rs  ray.rs  tuple.rs  vector.rs
src/shapes/: material.rs  mod.rs  patterns.rs  sphere.rs
src/shapes/patterns/: checkered.rs  gradient.rs  mod.rs  striped.rs
src/world/: camera.rs  intersection.rs  light.rs  mod.rs
