[package]
name = "ray_tracing_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
cucumber = "0.10"
tokio = {version = "1.10", features = ["macros", "rt-multi-thread", "time"]}

